--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 .nav{
     display: flex;
     flex-direction: row-reverse;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 10px 30px;
 }
 
@@ -15,6 +15,7 @@ body{
     .nav{
         display: flex;
         flex-direction: column-reverse;
+        margin-left: 30px;
     }
 }
 
