--- a/style.css
+++ b/style.css
@@ -49,14 +49,18 @@ body{
     }
 }
 
+.GContainer{
+    position: relative;
+}
 
 
 .theBorder{
-    position: fixed;
+    position: absolute;
     z-index: 50;
-    width: 400px;
+    width: 100%;
     height: 400px;
-    background-color: rgba(0, 0, 0, 0);
+    top: 0;
+    background-color: rgb(0, 0, 0);
     animation: fadeOut 5s ease-in forwards;
 }
 
