--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body{
     width: 100%;
     height: 400px;
     top: 0;
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0);
     animation: fadeOut 5s ease-in forwards;
 }
 
